--- a/index.html
+++ b/index.html
@@ -789,7 +789,7 @@
         params: {
             token: "ZMU0M2I1MJKTNMZLOS00ZWQ0LTLIMZUTMJE3ZWJKYZBJMWU0", // required
             stream_code: "kigh9", // required
-            thanks_page: "/thanks"
+            thanks_page: "/thanks/index.html"
         },
         subs: {
             sub1: drlead.queryGet("sub1"),
